--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,10 @@ title: Herr-Breier.de Blog
 description: >-
   just a minimalist, personal blog
 googlewebfonts: Fira+Code:wght@400;500;700
+# google_analytics: "G-6295ZYMZCR"
 lang: de-DE
 timezone: Berlin
-  #repo: https://github.com/p0wex/Gesko # site repo [optional]
+# repo: https://github.com/p0wex/Gesko # site repo [optional]
 data-theme: dark # default theme "dark" | "light"
 
 author:
